--- a/examples/avocados.ipynb
+++ b/examples/avocados.ipynb
@@ -216,7 +216,7 @@
    "source": [
     "models = ('mlr','knn','svr','xgboost','gbt','elasticnet','mlp','prophet','silverkite')\n",
     "\n",
-    "rerun = True\n",
+    "rerun = False\n",
     "if rerun:\n",
     "    for k, f in log_progress(avc.items()):\n",
     "        f.generate_future_dates(52)\n",
