--- a/examples/eCommerce.ipynb
+++ b/examples/eCommerce.ipynb
@@ -2467,7 +2467,7 @@
    "source": [
     "### Combination Modeling\n",
     "\n",
-    "The last combination modeling we will explore is combination modeling. There are three types of combinations:\n",
+    "The last model concept we will explore is combination modeling. There are three types of combinations:\n",
     "- simple: a simple average of a group of models.\n",
     "- weighted: a weighted average of a group of models. Weights can be passed manually (as we do below) or set automatically based on a metric passed to the `determine_best_by` parameter.\n",
     "- splice: a splice of two or more models at one or more future splice points. All metrics, fitted values, and test-set metrics from this model will be identical to the simple average.\n",
