--- a/examples/eCommerce.ipynb
+++ b/examples/eCommerce.ipynb
@@ -7,13 +7,14 @@
    "source": [
     "# Scalecast Overview\n",
     "\n",
-    "This notebook details a time series analysis and forecasting application performed with scalecast using the eCommerce dataset. The notebook starts with an exploratory data analysis; moves to time series decomposition; forecasts manually with an ARIMA model; forecasts manually with a multiple linear regression model; moves to automated forecasting with scikit-learn models, Facebook Prophet, and LinkedIn Greykite/Silverkite; explores TensorFlow recurrent neural nets; and finally finishes with combination modeling.\n",
+    "This notebook details a time series analysis and forecasting application performed with scalecast using the eCommerce dataset. The notebook starts with an exploratory data analysis; moves to time series decomposition; forecasts with an exponential smoothing model; an ARIMA model; a multiple linear regression model; moves to automated forecasting with scikit-learn models, Facebook Prophet, and LinkedIn Greykite/Silverkite; explores TensorFlow recurrent neural nets; and finally finishes with combination modeling.\n",
     "\n",
     "The utilized dataset is available on kaggle: https://www.kaggle.com/carrie1/ecommerce-data/\n",
     "\n",
     "[Library Imports](#Library-Imports)  \n",
     "[Exploratory Data Analysis](#Exploratory-Data-Analysis)  \n",
-    "[Forecast with Scalecast](#Forecast-with-Scalecast)  \n",
+    "[Forecast with scalecast](#Forecast-with-Scalecast)  \n",
+    "\n",
     "  - [Holt-Winters Exponential Smoothing](#HWES)  \n",
     "  - [ARIMA](#ARIMA)  \n",
     "  - [MLR](#MLR)  \n",
@@ -24,6 +25,7 @@
     "    - [SimpleRNN](#SimpleRNN)  \n",
     "    - [LSTM](#LSTM)  \n",
     "  - [Combination Modeling](#Combination-Modeling)  \n",
+    "\n",
     "[Export Results](#Export-Results)  \n",
     "\n",
     "## Library Imports\n",
@@ -3980,6 +3982,7 @@
    "source": [
     "## Export Results\n",
     "\n",
+    "[Back to top](#Scalecast-Overview)  \n",
     "Now that we have models that offer interesting ranges of predictions (and a few that look pretty bad), let's export all available results to Excel to view later. The first function below exports a workbook with five tabs that offer information including forecasted values, level forecasted values, descriptive information about each model, and test-set prediction. The second two functions export feature info and validation grids, and they have to_excel in the method name because they automatically put each model's info on a seperate tab."
    ]
   },
@@ -4067,101 +4070,7 @@
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
-    "state": {
-     "0271794b77d34e49a575323dc58f8dc4": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "1.5.0",
-      "model_name": "FloatProgressModel",
-      "state": {
-       "bar_style": "success",
-       "layout": "IPY_MODEL_93dd925283134fed850e2a4f6868c4fb",
-       "max": 9,
-       "style": "IPY_MODEL_5fa0c557534d4031a0ae54ca70c8399a",
-       "value": 9
-      }
-     },
-     "2b5247bdbded4cbda7e3b73d00ad8522": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "1.5.0",
-      "model_name": "HBoxModel",
-      "state": {
-       "children": [
-        "IPY_MODEL_3c7f4d377fc04b93910723eb421adaf2",
-        "IPY_MODEL_0271794b77d34e49a575323dc58f8dc4",
-        "IPY_MODEL_b2764d8406db4a1da0ae2c9e4aa5bf9b"
-       ],
-       "layout": "IPY_MODEL_9f2b238cc3884fc181e23bd58bf10b07"
-      }
-     },
-     "3c7f4d377fc04b93910723eb421adaf2": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "1.5.0",
-      "model_name": "HTMLModel",
-      "state": {
-       "layout": "IPY_MODEL_961f6aaf4c0e4f8e9435f18778905f9d",
-       "style": "IPY_MODEL_e11cd060ced0443abf582cad8b5246d9",
-       "value": "100%"
-      }
-     },
-     "5fa0c557534d4031a0ae54ca70c8399a": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "1.5.0",
-      "model_name": "ProgressStyleModel",
-      "state": {
-       "description_width": ""
-      }
-     },
-     "6eb1829ed1f943f5bc0e1bf3113c5256": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "1.5.0",
-      "model_name": "DescriptionStyleModel",
-      "state": {
-       "description_width": ""
-      }
-     },
-     "93dd925283134fed850e2a4f6868c4fb": {
-      "model_module": "@jupyter-widgets/base",
-      "model_module_version": "1.2.0",
-      "model_name": "LayoutModel",
-      "state": {}
-     },
-     "961f6aaf4c0e4f8e9435f18778905f9d": {
-      "model_module": "@jupyter-widgets/base",
-      "model_module_version": "1.2.0",
-      "model_name": "LayoutModel",
-      "state": {}
-     },
-     "9f2b238cc3884fc181e23bd58bf10b07": {
-      "model_module": "@jupyter-widgets/base",
-      "model_module_version": "1.2.0",
-      "model_name": "LayoutModel",
-      "state": {}
-     },
-     "aef6484cf893488fae039aaa1b552b3f": {
-      "model_module": "@jupyter-widgets/base",
-      "model_module_version": "1.2.0",
-      "model_name": "LayoutModel",
-      "state": {}
-     },
-     "b2764d8406db4a1da0ae2c9e4aa5bf9b": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "1.5.0",
-      "model_name": "HTMLModel",
-      "state": {
-       "layout": "IPY_MODEL_aef6484cf893488fae039aaa1b552b3f",
-       "style": "IPY_MODEL_6eb1829ed1f943f5bc0e1bf3113c5256",
-       "value": " 9/9 [00:52&lt;00:00,  7.61s/it]"
-      }
-     },
-     "e11cd060ced0443abf582cad8b5246d9": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "1.5.0",
-      "model_name": "DescriptionStyleModel",
-      "state": {
-       "description_width": ""
-      }
-     }
-    },
+    "state": {},
     "version_major": 2,
     "version_minor": 0
    }
