--- a/docs/Forecaster/ForecasterGlobals.ipynb
+++ b/docs/Forecaster/ForecasterGlobals.ipynb
@@ -9,15 +9,15 @@
     "\n",
     "- In scalecast, it is helpful to know the following terms:\n",
     "\n",
-    "[estimators](#estimators)  \n",
+    "[`_estimators_`](#_estimators_)  \n",
     "  \n",
-    "  - [estimators that can be tuned](#estimators-that-can-be-tuned)  \n",
-    "  - [estimators that cannot be tuned](#estimators-that-cannot-be-tuned)  \n",
-    "  - [sklearn estimators](#sklearn-estimators)  \n",
+    "  - [`can_be_tuned`](#_can_be_tuned_)  \n",
+    "  - [`cannot_be_tuned`](#_cannot_be_tuned_)  \n",
+    "  - [`_sklearn estimators`](#_sklearn_estimators_)  \n",
     "  \n",
-    "[metrics](#metrics)  \n",
-    "[determine_best_by](#determine_best_by)  \n",
-    "[normalizer](#normalizer)  "
+    "[`_metrics_`](#_metrics_)  \n",
+    "[`_determine_best_by_`](#_determine_best_by_)  \n",
+    "[`_normalizer_`](#_normalizer_)  "
    ]
   },
   {
@@ -25,10 +25,10 @@
    "id": "79489a25-ef5f-4b6e-ae56-01550550b547",
    "metadata": {},
    "source": [
-    "## estimators\n",
-    "- estimators (`_estimators_` in the docs) are the models that actually forecast\n",
+    "## `_estimators_`\n",
+    "- these are the the models that forecast and can be set by using `f.set_estimator(...)`\n",
     "- they come from popular machine learning libraries like scikit-learn, keras, statsmodels, and others\n",
-    "- here is a list of all estimators:"
+    "- here is a list of all:"
    ]
   },
   {
@@ -70,24 +70,8 @@
    "id": "74643955-d8d9-4875-9ec3-f865c349c577",
    "metadata": {},
    "source": [
-    "### estimators that can be tuned\n",
-    "- the following estimators can be tuned by using a process similar to the following:\n",
-    "\n",
-    "```python\n",
-    "from scalecast.Forecaster import Forecaster\n",
-    "from scalecast import GridGenerator\n",
-    "\n",
-    "GridGenerator.get_example_grids()\n",
-    "\n",
-    "models = ('arima','elasticnet','gbt')\n",
-    "f = Forecaster(y=y,current_dates=current_dates)\n",
-    "f.set_validation_length(6)\n",
-    "\n",
-    "for m in models:\n",
-    "    f.set_estimator(m)\n",
-    "    f.tune()\n",
-    "    f.auto_forecast()\n",
-    "```"
+    "### `_can_be_tuned_`\n",
+    "- the following estimators can be tuned:"
    ]
   },
   {
@@ -126,7 +110,7 @@
    "id": "65308432-b018-4e87-8564-e6b23d8af636",
    "metadata": {},
    "source": [
-    "### estimators that cannot be tuned"
+    "### `_cannot_be_tuned_`"
    ]
   },
   {
@@ -155,7 +139,7 @@
    "id": "3be1ad09-63b2-4102-b642-4e85ea0a3bf3",
    "metadata": {},
    "source": [
-    "### sklearn estimators\n",
+    "### `_sklearn_estimators_`\n",
     "- all sklearn estimators accept an Xvars and normalizer argument and these can be tuned as well:"
    ]
   },
@@ -191,7 +175,7 @@
    "id": "9c9c4392-71b8-4629-a60a-56d90e4c3688",
    "metadata": {},
    "source": [
-    "## metrics\n",
+    "## `_metrics_`\n",
     "- these are all the metrics available to use for model validation"
    ]
   },
@@ -222,7 +206,7 @@
    "id": "33b4e1b2-0cff-49f8-966f-e65a43068ca9",
    "metadata": {},
    "source": [
-    "## determine_best_by\n",
+    "## `_determine_best_by_`\n",
     "- these are all the metrics available to use for model comparison and sorting models best-to-worst"
    ]
   },
@@ -262,8 +246,10 @@
    "id": "da9dc276-da9f-493b-a4eb-8755c440f93a",
    "metadata": {},
    "source": [
-    "## normalizer\n",
-    "- these are all the options to scale your data before using an sklearn estimator"
+    "## `_normalizer_`\n",
+    "- these are all the options to scale your data when using an sklearn estimator\n",
+    "- tensorflow networks always use minmax and cannot be changed\n",
+    "- all other estimators are not scaled"
    ]
   },
   {
