Forecaster globals notebook update for documentation
Was looking pretty bad

--- a/docs/Forecaster/ForecasterGlobals.ipynb
+++ b/docs/Forecaster/ForecasterGlobals.ipynb
@@ -7,17 +7,7 @@
    "source": [
     "# Forecaster Object Globals\n",
     "\n",
-    "- In scalecast, it is helpful to know the following terms:\n",
-    "\n",
-    "[`_estimators_`](#_estimators_)  \n",
-    "  \n",
-    "  - [`can_be_tuned`](#_can_be_tuned_)  \n",
-    "  - [`cannot_be_tuned`](#_cannot_be_tuned_)  \n",
-    "  - [`_sklearn estimators`](#_sklearn_estimators_)  \n",
-    "  \n",
-    "[`_metrics_`](#_metrics_)  \n",
-    "[`_determine_best_by_`](#_determine_best_by_)  \n",
-    "[`_normalizer_`](#_normalizer_)  "
+    "- In scalecast, when reading documentation, it is helpful to know the following terms: `_estimators_`, `_can_be_tuned_`, `_cannot_be_tuned_`, `_sklearn_estimators_`, `_metrics_`, `_determine_best_by_`, `_normalizer_`. "
    ]
   },
   {
@@ -110,7 +100,8 @@
    "id": "65308432-b018-4e87-8564-e6b23d8af636",
    "metadata": {},
    "source": [
-    "### `_cannot_be_tuned_`"
+    "### `_cannot_be_tuned_`\n",
+    "- the following cannot be tuned:"
    ]
   },
   {
@@ -140,7 +131,7 @@
    "metadata": {},
    "source": [
     "### `_sklearn_estimators_`\n",
-    "- all sklearn estimators accept an Xvars and normalizer argument and these can be tuned as well:"
+    "- these all come from scikit-learn or use a scikit-learn API and behave similarly (including being easy-to-tune, accepting a `normalizer` argument, and accpeting an `Xvars` argument):"
    ]
   },
   {
@@ -176,7 +167,7 @@
    "metadata": {},
    "source": [
     "## `_metrics_`\n",
-    "- these are all the metrics available to use for model validation"
+    "- these are all the metrics available to use for model validation `f.set_validation_metric(...)`:"
    ]
   },
   {
@@ -207,7 +198,7 @@
    "metadata": {},
    "source": [
     "## `_determine_best_by_`\n",
-    "- these are all the metrics available to use for model comparison and sorting models best-to-worst"
+    "- these are all the metrics available to use for model comparison and sorting models best-to-worst `f.export(determine_best_by=...)`:"
    ]
   },
   {
@@ -247,9 +238,7 @@
    "metadata": {},
    "source": [
     "## `_normalizer_`\n",
-    "- these are all the options to scale your data when using an sklearn estimator\n",
-    "- tensorflow networks always use minmax and cannot be changed\n",
-    "- all other estimators are not scaled"
+    "- these are all the options to scale your data when using an sklearn estimator `f.manual_forecast(normalizer=...)`:"
    ]
   },
   {
