Added user functions to MVForecaster optimize_on

--- a/docs/Forecaster/ForecasterGlobals.ipynb
+++ b/docs/Forecaster/ForecasterGlobals.ipynb
@@ -275,9 +275,49 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "fb1399f8-24b8-4f4d-a5b7-3c539b3ccc45",
+   "metadata": {},
+   "source": [
+    "## `_optimizer_funcs_`\n",
+    "- these are the functions you can use to optimize models in `MVForecaster` only\n",
+    "- this means that if you use the `\"mean\"` option, which is the object's default, when tuning models, it will choose the best one based on which metric had the best average performance on all series\n",
+    "- you can add your own functions by calling `add_optimizer_func()`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "bda547be-85d6-4275-b671-6681833535fd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mean\n",
+      "min\n",
+      "max\n"
+     ]
+    }
+   ],
+   "source": [
+    "from scalecast.MVForecaster import _optimizer_funcs_\n",
+    "print(*_optimizer_funcs_,sep='\\n')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1216d561-b471-48ad-87ba-0bfe1302d336",
+   "metadata": {},
+   "source": [
+    "adding optimizer funcs that are not native to scalecast is easy. see: https://scalecast.readthedocs.io/en/latest/Forecaster/Forecaster.html#src.scalecast.MVForecaster.MVForecaster.add_optimizer_func"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bda547be-85d6-4275-b671-6681833535fd",
+   "id": "9e13e649-048a-417e-9603-ccaf5e58fb48",
    "metadata": {},
    "outputs": [],
    "source": []
