--- a/docs/Forecaster/ForecasterGlobals.ipynb
+++ b/docs/Forecaster/ForecasterGlobals.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "ffcafcca-d896-4122-8de4-d8c410f723d7",
    "metadata": {},
    "source": [
     "# Basic Terminonlogy\n",
@@ -12,19 +11,17 @@
   },
   {
    "cell_type": "markdown",
-   "id": "79489a25-ef5f-4b6e-ae56-01550550b547",
    "metadata": {},
    "source": [
     "## `_estimators_`\n",
     "- these are the the models that forecast and can be set by using `f.set_estimator(...)`\n",
     "- they come from popular machine learning libraries like scikit-learn, keras, statsmodels, and others\n",
-    "- here is a list of all:"
+    "- add any sklearn estimators to [`Forecaster`](https://scalecast.readthedocs.io/en/latest/Forecaster/Forecaster.html#src.scalecast.Forecaster.Forecaster.add_sklearn_estimator) and [`MVForecaster`](https://scalecast.readthedocs.io/en/latest/Forecaster/MVForecaster.html#src.scalecast.MVForecaster.MVForecaster.add_sklearn_estimator) classes"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "f174071b-08b6-463b-8d6f-73562c75490e",
    "metadata": {},
    "outputs": [
     {
@@ -37,12 +34,14 @@
       "gbt\n",
       "hwes\n",
       "knn\n",
+      "lasso\n",
       "lightgbm\n",
       "lstm\n",
       "mlp\n",
       "mlr\n",
       "prophet\n",
       "rf\n",
+      "ridge\n",
       "rnn\n",
       "sgd\n",
       "silverkite\n",
@@ -58,7 +57,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "74643955-d8d9-4875-9ec3-f865c349c577",
    "metadata": {},
    "source": [
     "### `_can_be_tuned_`\n",
@@ -68,7 +66,6 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "188e4c7d-5db5-4fdc-a487-2b5a3f6068d9",
    "metadata": {},
    "outputs": [
     {
@@ -80,11 +77,13 @@
       "gbt\n",
       "hwes\n",
       "knn\n",
+      "lasso\n",
       "lightgbm\n",
       "mlp\n",
       "mlr\n",
       "prophet\n",
       "rf\n",
+      "ridge\n",
       "sgd\n",
       "silverkite\n",
       "svr\n",
@@ -99,7 +98,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "65308432-b018-4e87-8564-e6b23d8af636",
    "metadata": {},
    "source": [
     "### `_cannot_be_tuned_`\n",
@@ -109,7 +107,6 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "b7979606-b682-4ed8-8a26-8269f5080b82",
    "metadata": {},
    "outputs": [
     {
@@ -129,7 +126,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3be1ad09-63b2-4102-b642-4e85ea0a3bf3",
    "metadata": {},
    "source": [
     "### `_sklearn_estimators_`\n",
@@ -139,7 +135,6 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "fddceb66-107d-4357-a998-bd962f4905ac",
    "metadata": {},
    "outputs": [
     {
@@ -149,10 +144,12 @@
       "elasticnet\n",
       "gbt\n",
       "knn\n",
+      "lasso\n",
       "lightgbm\n",
       "mlp\n",
       "mlr\n",
       "rf\n",
+      "ridge\n",
       "sgd\n",
       "svr\n",
       "xgboost\n"
@@ -166,7 +163,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ddf4292a-dc51-4bb8-a65b-658a5f778dd9",
    "metadata": {},
    "source": [
     "- adding sklearn estimators that are not native to scalecast is easy. see: https://scalecast.readthedocs.io/en/latest/Forecaster/Forecaster.html#src.scalecast.Forecaster.Forecaster.add_sklearn_estimator"
@@ -174,7 +170,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9c9c4392-71b8-4629-a60a-56d90e4c3688",
    "metadata": {},
    "source": [
     "## `_metrics_`\n",
@@ -184,7 +179,6 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "eb2276f4-9899-45fd-aed6-500973d4567b",
    "metadata": {},
    "outputs": [
     {
@@ -205,7 +199,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "33b4e1b2-0cff-49f8-966f-e65a43068ca9",
    "metadata": {},
    "source": [
     "## `_determine_best_by_`\n",
@@ -215,7 +208,6 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "7a5773c5-8ad9-4cd7-9eb8-8c79fd6488f9",
    "metadata": {},
    "outputs": [
     {
@@ -245,7 +237,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "da9dc276-da9f-493b-a4eb-8755c440f93a",
    "metadata": {},
    "source": [
     "## `_normalizer_`\n",
@@ -255,7 +246,6 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "218209fd-a318-4e84-8dbf-1e4d350649ee",
    "metadata": {},
    "outputs": [
     {
@@ -276,7 +266,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fb1399f8-24b8-4f4d-a5b7-3c539b3ccc45",
    "metadata": {},
    "source": [
     "## `_optimizer_funcs_`\n",
@@ -288,7 +277,6 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "bda547be-85d6-4275-b671-6681833535fd",
    "metadata": {},
    "outputs": [
     {
@@ -308,7 +296,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1216d561-b471-48ad-87ba-0bfe1302d336",
    "metadata": {},
    "source": [
     "adding optimizer funcs that are not native to scalecast is easy. see: https://scalecast.readthedocs.io/en/latest/Forecaster/MVForecaster.html#src.scalecast.MVForecaster.MVForecaster.add_optimizer_func"
@@ -317,7 +304,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9e13e649-048a-417e-9603-ccaf5e58fb48",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -339,7 +325,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.7.4"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
