--- a/docs/Forecaster/ForecasterGlobals.ipynb
+++ b/docs/Forecaster/ForecasterGlobals.ipynb
@@ -16,7 +16,7 @@
     "## `_estimators_`\n",
     "- these are the the models that forecast and can be set by using `f.set_estimator(...)`\n",
     "- they come from popular machine learning libraries like scikit-learn, keras, statsmodels, and others\n",
-    "- add any sklearn estimators to [`Forecaster`](https://scalecast.readthedocs.io/en/latest/Forecaster/Forecaster.html#src.scalecast.Forecaster.Forecaster.add_sklearn_estimator) and [`MVForecaster`](https://scalecast.readthedocs.io/en/latest/Forecaster/MVForecaster.html#src.scalecast.MVForecaster.MVForecaster.add_sklearn_estimator) classes"
+    "- add any other sklearn estimator to the `Forecaster` ([docs](https://scalecast.readthedocs.io/en/latest/Forecaster/Forecaster.html#src.scalecast.Forecaster.Forecaster.add_sklearn_estimator)) and `MVForecaster` ([docs](https://scalecast.readthedocs.io/en/latest/Forecaster/MVForecaster.html#src.scalecast.MVForecaster.MVForecaster.add_sklearn_estimator)) classes"
    ]
   },
   {
@@ -271,7 +271,7 @@
     "## `_optimizer_funcs_`\n",
     "- these are the functions you can use to optimize models in `MVForecaster` only\n",
     "- this means that if you use the `\"mean\"` option, which is the object's default, when tuning models, it will choose the best one based on which metric had the best average performance on all series\n",
-    "- you can add your own functions by calling `add_optimizer_func()`"
+    "- you can add your own functions by calling `add_optimizer_func()`: see the [docs](https://scalecast.readthedocs.io/en/latest/Forecaster/MVForecaster.html#src.scalecast.MVForecaster.MVForecaster.add_optimizer_func)"
    ]
   },
   {
@@ -292,13 +292,6 @@
    "source": [
     "from scalecast.MVForecaster import _optimizer_funcs_\n",
     "print(*_optimizer_funcs_,sep='\\n')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "adding optimizer funcs that are not native to scalecast is easy. see: https://scalecast.readthedocs.io/en/latest/Forecaster/MVForecaster.html#src.scalecast.MVForecaster.MVForecaster.add_optimizer_func"
    ]
   },
   {
