--- a/docs/Forecaster/ForecasterGlobals.ipynb
+++ b/docs/Forecaster/ForecasterGlobals.ipynb
@@ -2,15 +2,17 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "67c54b8b",
    "metadata": {},
    "source": [
-    "# Basic Terminonlogy\n",
+    "# Terms to Know\n",
     "\n",
     "- In scalecast, when reading documentation, it is helpful to know the following terms: `_estimators_`, `_can_be_tuned_`, `_cannot_be_tuned_`, `_sklearn_estimators_`, `_metrics_`, `_determine_best_by_`, `_normalizer_`. "
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "343236a8",
    "metadata": {},
    "source": [
     "## `_estimators_`\n",
@@ -22,6 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "d0caf64a",
    "metadata": {},
    "outputs": [
     {
@@ -57,6 +60,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "86dbb4b1",
    "metadata": {},
    "source": [
     "### `_can_be_tuned_`\n",
@@ -66,6 +70,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "261769c1",
    "metadata": {},
    "outputs": [
     {
@@ -98,6 +103,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "023f7a0f",
    "metadata": {},
    "source": [
     "### `_cannot_be_tuned_`\n",
@@ -107,6 +113,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "17de063c",
    "metadata": {},
    "outputs": [
     {
@@ -126,6 +133,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c2d33c34",
    "metadata": {},
    "source": [
     "### `_sklearn_estimators_`\n",
@@ -135,6 +143,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
+   "id": "17368c9c",
    "metadata": {},
    "outputs": [
     {
@@ -163,6 +172,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "431b6ff5",
    "metadata": {},
    "source": [
     "- adding sklearn estimators that are not native to scalecast is easy. see: https://scalecast.readthedocs.io/en/latest/Forecaster/Forecaster.html#src.scalecast.Forecaster.Forecaster.add_sklearn_estimator"
@@ -170,6 +180,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "28c9927d",
    "metadata": {},
    "source": [
     "## `_metrics_`\n",
@@ -179,6 +190,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
+   "id": "58e6e57f",
    "metadata": {},
    "outputs": [
     {
@@ -199,6 +211,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "6ef0abfa",
    "metadata": {},
    "source": [
     "## `_determine_best_by_`\n",
@@ -208,6 +221,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
+   "id": "61da8d1c",
    "metadata": {},
    "outputs": [
     {
@@ -237,6 +251,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b0dd2a79",
    "metadata": {},
    "source": [
     "## `_normalizer_`\n",
@@ -246,6 +261,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
+   "id": "905f8843",
    "metadata": {},
    "outputs": [
     {
@@ -266,6 +282,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "9794b0f4",
    "metadata": {},
    "source": [
     "## `_optimizer_funcs_`\n",
@@ -277,6 +294,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
+   "id": "d65a1c34",
    "metadata": {},
    "outputs": [
     {
@@ -297,6 +315,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "999239e8",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -318,7 +337,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.8.8"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
