--- a/docs/Forecaster/ForecasterGlobals.ipynb
+++ b/docs/Forecaster/ForecasterGlobals.ipynb
@@ -49,6 +49,7 @@
       "sgd\n",
       "silverkite\n",
       "svr\n",
+      "theta\n",
       "xgboost\n"
      ]
     }
@@ -92,6 +93,7 @@
       "sgd\n",
       "silverkite\n",
       "svr\n",
+      "theta\n",
       "xgboost\n"
      ]
     }
