--- a/docs/Forecaster/ForecasterGlobals.ipynb
+++ b/docs/Forecaster/ForecasterGlobals.ipynb
@@ -17,8 +17,7 @@
    "source": [
     "## `_estimators_`\n",
     "- these are the the models that forecast and can be set by using `f.set_estimator(...)`\n",
-    "- they come from popular machine learning libraries like scikit-learn, keras, statsmodels, and others\n",
-    "- add any other sklearn estimator to the `Forecaster` ([docs](https://scalecast.readthedocs.io/en/latest/Forecaster/Forecaster.html#src.scalecast.Forecaster.Forecaster.add_sklearn_estimator)) and `MVForecaster` ([docs](https://scalecast.readthedocs.io/en/latest/Forecaster/MVForecaster.html#src.scalecast.MVForecaster.MVForecaster.add_sklearn_estimator)) classes"
+    "- they come from popular machine learning libraries like scikit-learn, keras, statsmodels, and others"
    ]
   },
   {
@@ -177,7 +176,7 @@
    "id": "431b6ff5",
    "metadata": {},
    "source": [
-    "- adding sklearn estimators that are not native to scalecast is easy. see: https://scalecast.readthedocs.io/en/latest/Forecaster/Forecaster.html#src.scalecast.Forecaster.Forecaster.add_sklearn_estimator"
+    "- add any other sklearn estimator to the `Forecaster` ([docs](https://scalecast.readthedocs.io/en/latest/Forecaster/Forecaster.html#src.scalecast.Forecaster.Forecaster.add_sklearn_estimator)) and `MVForecaster` ([docs](https://scalecast.readthedocs.io/en/latest/Forecaster/MVForecaster.html#src.scalecast.MVForecaster.MVForecaster.add_sklearn_estimator)) classes"
    ]
   },
   {
