--- a/docs/Forecaster/ForecasterGlobals.ipynb
+++ b/docs/Forecaster/ForecasterGlobals.ipynb
@@ -239,6 +239,10 @@
       "InSampleMAPE\n",
       "InSampleMAE\n",
       "InSampleR2\n",
+      "LevelInSampleRMSE\n",
+      "LevelInSampleMAPE\n",
+      "LevelInSampleMAE\n",
+      "LevelInSampleR2\n",
       "ValidationMetricValue\n",
       "LevelTestSetRMSE\n",
       "LevelTestSetMAPE\n",
