--- a/docs/Forecaster/ForecasterGlobals.ipynb
+++ b/docs/Forecaster/ForecasterGlobals.ipynb
@@ -11,6 +11,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "dc93e431-54fc-4cdd-9e06-ad050eedab6a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "sys.path.append('../../')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "343236a8",
    "metadata": {},
@@ -23,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "d0caf64a",
    "metadata": {},
    "outputs": [
@@ -42,6 +53,7 @@
       "lstm\n",
       "mlp\n",
       "mlr\n",
+      "naive\n",
       "prophet\n",
       "rf\n",
       "ridge\n",
@@ -55,7 +67,7 @@
     }
    ],
    "source": [
-    "from scalecast.Forecaster import _estimators_\n",
+    "from src.scalecast.Forecaster import _estimators_\n",
     "print(*_estimators_,sep='\\n')"
    ]
   },
@@ -70,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "261769c1",
    "metadata": {},
    "outputs": [
@@ -99,7 +111,7 @@
     }
    ],
    "source": [
-    "from scalecast.Forecaster import _can_be_tuned_\n",
+    "from src.scalecast.Forecaster import _can_be_tuned_\n",
     "print(*_can_be_tuned_,sep='\\n')"
    ]
   },
@@ -114,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "17de063c",
    "metadata": {},
    "outputs": [
@@ -124,12 +136,13 @@
      "text": [
       "combo\n",
       "rnn\n",
-      "lstm\n"
+      "lstm\n",
+      "naive\n"
      ]
     }
    ],
    "source": [
-    "from scalecast.Forecaster import _cannot_be_tuned_\n",
+    "from src.scalecast.Forecaster import _cannot_be_tuned_\n",
     "print(*_cannot_be_tuned_,sep='\\n')"
    ]
   },
@@ -144,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "17368c9c",
    "metadata": {},
    "outputs": [
@@ -168,7 +181,7 @@
     }
    ],
    "source": [
-    "from scalecast.Forecaster import _sklearn_estimators_\n",
+    "from src.scalecast.Forecaster import _sklearn_estimators_\n",
     "print(*_sklearn_estimators_,sep='\\n')"
    ]
   },
@@ -191,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "58e6e57f",
    "metadata": {},
    "outputs": [
@@ -207,7 +220,7 @@
     }
    ],
    "source": [
-    "from scalecast.Forecaster import _metrics_\n",
+    "from src.scalecast.Forecaster import _metrics_\n",
     "print(*_metrics_,sep='\\n')"
    ]
   },
@@ -223,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "61da8d1c",
    "metadata": {},
    "outputs": [
@@ -252,7 +265,7 @@
     }
    ],
    "source": [
-    "from scalecast.Forecaster import _determine_best_by_\n",
+    "from src.scalecast.Forecaster import _determine_best_by_\n",
     "print(*_determine_best_by_,sep='\\n')"
    ]
   },
@@ -267,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "905f8843",
    "metadata": {},
    "outputs": [
@@ -283,7 +296,7 @@
     }
    ],
    "source": [
-    "from scalecast.Forecaster import _normalizer_\n",
+    "from src.scalecast.Forecaster import _normalizer_\n",
     "print(*_normalizer_,sep='\\n')"
    ]
   },
@@ -300,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "d65a1c34",
    "metadata": {},
    "outputs": [
@@ -315,7 +328,7 @@
     }
    ],
    "source": [
-    "from scalecast.MVForecaster import _optimizer_funcs_\n",
+    "from src.scalecast.MVForecaster import _optimizer_funcs_\n",
     "print(*_optimizer_funcs_,sep='\\n')"
    ]
   },
