--- a/docs/Forecaster/ForecasterGlobals.ipynb
+++ b/docs/Forecaster/ForecasterGlobals.ipynb
@@ -43,6 +43,7 @@
      "output_type": "stream",
      "text": [
       "arima\n",
+      "catboost\n",
       "combo\n",
       "elasticnet\n",
       "gbt\n",
@@ -91,6 +92,7 @@
      "output_type": "stream",
      "text": [
       "arima\n",
+      "catboost\n",
       "elasticnet\n",
       "gbt\n",
       "hwes\n",
@@ -165,6 +167,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "catboost\n",
       "elasticnet\n",
       "gbt\n",
       "knn\n",
@@ -343,7 +346,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
