--- a/docs/Forecaster/ForecasterGlobals.ipynb
+++ b/docs/Forecaster/ForecasterGlobals.ipynb
@@ -148,7 +148,7 @@
    "metadata": {},
    "source": [
     "### `Forecaster.sklearn_estimators`\n",
-    "- These all come from scikit-learn or use a basic scikit-learn API and behave similarly, including accepting a `normalizer` argument, and accepting an `Xvars` argument, and offering different recursive evaluation lengths."
+    "- These all come from scikit-learn or use a basic scikit-learn API and behave similarly, including accepting a `normalizer` argument, accepting an `Xvars` argument, and offering any recursive evaluation length."
    ]
   },
   {
