Updated some of the docs

--- a/docs/Forecaster/ForecasterGlobals.ipynb
+++ b/docs/Forecaster/ForecasterGlobals.ipynb
@@ -33,7 +33,7 @@
     "        'r2', # default\n",
     "        'smape',\n",
     "        'mse',\n",
-    "        'bias',\n",
+    "        'abias',\n",
     "    ],\n",
     ")"
    ]
@@ -206,7 +206,7 @@
       "r2\n",
       "smape\n",
       "mse\n",
-      "bias\n"
+      "abias\n"
      ]
     }
    ],
@@ -242,28 +242,28 @@
       "TestSetR2\n",
       "TestSetSMAPE\n",
       "TestSetMSE\n",
-      "TestSetBIAS\n",
+      "TestSetABIAS\n",
       "InSampleRMSE\n",
       "InSampleMAPE\n",
       "InSampleMAE\n",
       "InSampleR2\n",
       "InSampleSMAPE\n",
       "InSampleMSE\n",
-      "InSampleBIAS\n",
+      "InSampleABIAS\n",
       "LevelTestSetRMSE\n",
       "LevelTestSetMAPE\n",
       "LevelTestSetMAE\n",
       "LevelTestSetR2\n",
       "LevelTestSetSMAPE\n",
       "LevelTestSetMSE\n",
-      "LevelTestSetBIAS\n",
+      "LevelTestSetABIAS\n",
       "LevelInSampleRMSE\n",
       "LevelInSampleMAPE\n",
       "LevelInSampleMAE\n",
       "LevelInSampleR2\n",
       "LevelInSampleSMAPE\n",
       "LevelInSampleMSE\n",
-      "LevelInSampleBIAS\n",
+      "LevelInSampleABIAS\n",
       "ValidationMetricValue\n"
      ]
     }
@@ -360,7 +360,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.8.8"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
