code fixes after validation
Also fixing the docs

--- a/docs/Forecaster/ForecasterGlobals.ipynb
+++ b/docs/Forecaster/ForecasterGlobals.ipynb
@@ -59,137 +59,32 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "catboost\n",
-      "elasticnet\n",
-      "gbt\n",
-      "knn\n",
-      "lasso\n",
-      "lightgbm\n",
-      "mlp\n",
-      "mlr\n",
-      "rf\n",
-      "ridge\n",
-      "sgd\n",
-      "svr\n",
-      "xgboost\n",
-      "arima\n",
-      "hwes\n",
-      "prophet\n",
-      "silverkite\n",
-      "rnn\n",
-      "lstm\n",
-      "naive\n",
-      "tbats\n",
-      "theta\n",
-      "combo\n"
+      "Estimator(name='catboost', imported_model=<class 'catboost.core.CatBoostRegressor'>, interpreted_model=<class 'scalecast.models.SKLearnUni'>)\n",
+      "Estimator(name='elasticnet', imported_model=<class 'sklearn.linear_model._coordinate_descent.ElasticNet'>, interpreted_model=<class 'scalecast.models.SKLearnUni'>)\n",
+      "Estimator(name='gbt', imported_model=<class 'sklearn.ensemble._gb.GradientBoostingRegressor'>, interpreted_model=<class 'scalecast.models.SKLearnUni'>)\n",
+      "Estimator(name='knn', imported_model=<class 'sklearn.neighbors._regression.KNeighborsRegressor'>, interpreted_model=<class 'scalecast.models.SKLearnUni'>)\n",
+      "Estimator(name='lasso', imported_model=<class 'sklearn.linear_model._coordinate_descent.Lasso'>, interpreted_model=<class 'scalecast.models.SKLearnUni'>)\n",
+      "Estimator(name='mlp', imported_model=<class 'sklearn.neural_network._multilayer_perceptron.MLPRegressor'>, interpreted_model=<class 'scalecast.models.SKLearnUni'>)\n",
+      "Estimator(name='mlr', imported_model=<class 'sklearn.linear_model._base.LinearRegression'>, interpreted_model=<class 'scalecast.models.SKLearnUni'>)\n",
+      "Estimator(name='rf', imported_model=<class 'sklearn.ensemble._forest.RandomForestRegressor'>, interpreted_model=<class 'scalecast.models.SKLearnUni'>)\n",
+      "Estimator(name='ridge', imported_model=<class 'sklearn.linear_model._ridge.Ridge'>, interpreted_model=<class 'scalecast.models.SKLearnUni'>)\n",
+      "Estimator(name='sgd', imported_model=<class 'sklearn.linear_model._stochastic_gradient.SGDRegressor'>, interpreted_model=<class 'scalecast.models.SKLearnUni'>)\n",
+      "Estimator(name='svr', imported_model=<class 'sklearn.svm._classes.SVR'>, interpreted_model=<class 'scalecast.models.SKLearnUni'>)\n",
+      "Estimator(name='xgboost', imported_model=<class 'xgboost.sklearn.XGBRegressor'>, interpreted_model=<class 'scalecast.models.SKLearnUni'>)\n",
+      "Estimator(name='arima', imported_model='auto', interpreted_model=<class 'scalecast.models.ARIMA'>)\n",
+      "Estimator(name='hwes', imported_model='auto', interpreted_model=<class 'scalecast.models.HWES'>)\n",
+      "Estimator(name='prophet', imported_model='auto', interpreted_model=<class 'scalecast.models.Prophet'>)\n",
+      "Estimator(name='rnn', imported_model='auto', interpreted_model=<class 'scalecast.models.RNN'>)\n",
+      "Estimator(name='lstm', imported_model='auto', interpreted_model=<class 'scalecast.models.LSTM'>)\n",
+      "Estimator(name='naive', imported_model='auto', interpreted_model=<class 'scalecast.models.Naive'>)\n",
+      "Estimator(name='tbats', imported_model='auto', interpreted_model=<class 'scalecast.models.TBATS'>)\n",
+      "Estimator(name='theta', imported_model='auto', interpreted_model=<class 'scalecast.models.Theta'>)\n",
+      "Estimator(name='combo', imported_model='auto', interpreted_model=<class 'scalecast.models.Combo'>)\n"
      ]
     }
    ],
    "source": [
     "print(*f.estimators,sep='\\n')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "86dbb4b1",
-   "metadata": {},
-   "source": [
-    "### `Forecaster.can_be_tuned`\n",
-    "- The following estimators can be tuned using a grid search and cross validation."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "261769c1",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "catboost\n",
-      "elasticnet\n",
-      "gbt\n",
-      "knn\n",
-      "lasso\n",
-      "lightgbm\n",
-      "mlp\n",
-      "mlr\n",
-      "rf\n",
-      "ridge\n",
-      "sgd\n",
-      "svr\n",
-      "xgboost\n",
-      "arima\n",
-      "hwes\n",
-      "prophet\n",
-      "silverkite\n",
-      "rnn\n",
-      "lstm\n",
-      "naive\n",
-      "tbats\n",
-      "theta\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(*f.can_be_tuned,sep='\\n')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "9a6d5f50-832f-452a-99e2-f6ecceb8d174",
-   "metadata": {},
-   "source": [
-    "As of version 0.18.0, the only model missing here is combo."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "c2d33c34",
-   "metadata": {},
-   "source": [
-    "### `Forecaster.sklearn_estimators`\n",
-    "- These all come from scikit-learn or use a basic scikit-learn API and behave similarly, including accepting a `normalizer` argument, accepting an `Xvars` argument, and offering any recursive evaluation length."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "17368c9c",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "catboost\n",
-      "elasticnet\n",
-      "gbt\n",
-      "knn\n",
-      "lasso\n",
-      "lightgbm\n",
-      "mlp\n",
-      "mlr\n",
-      "rf\n",
-      "ridge\n",
-      "sgd\n",
-      "svr\n",
-      "xgboost\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(*f.sklearn_estimators,sep='\\n')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "431b6ff5",
-   "metadata": {},
-   "source": [
-    "- Add any other sklearn estimator to the `Forecaster` ([docs](https://scalecast.readthedocs.io/en/latest/Forecaster/Forecaster.html#src.scalecast.Forecaster.Forecaster.add_sklearn_estimator)) and `MVForecaster` ([docs](https://scalecast.readthedocs.io/en/latest/Forecaster/MVForecaster.html#src.scalecast.MVForecaster.MVForecaster.add_sklearn_estimator)) classes."
    ]
   },
   {
@@ -205,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "58e6e57f",
    "metadata": {},
    "outputs": [
@@ -213,18 +108,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "rmse\n",
-      "mape\n",
-      "mae\n",
-      "r2\n",
-      "smape\n",
-      "mse\n",
-      "abias\n"
+      "MetricStore(name='rmse', eval_func=<function Metrics.rmse at 0x12b6e79c0>, lower_is_better=True, min_obs_required=1)\n",
+      "MetricStore(name='mape', eval_func=<function Metrics.mape at 0x12af31940>, lower_is_better=True, min_obs_required=1)\n",
+      "MetricStore(name='mae', eval_func=<function Metrics.mae at 0x12b6e7a60>, lower_is_better=True, min_obs_required=1)\n",
+      "MetricStore(name='r2', eval_func=<function Metrics.r2 at 0x12b6e63e0>, lower_is_better=False, min_obs_required=2)\n",
+      "MetricStore(name='smape', eval_func=<function Metrics.smape at 0x12b6e7b00>, lower_is_better=True, min_obs_required=1)\n",
+      "MetricStore(name='mse', eval_func=<function Metrics.mse at 0x12b6e7880>, lower_is_better=True, min_obs_required=1)\n",
+      "MetricStore(name='abias', eval_func=<function Metrics.smape at 0x12b6e7b00>, lower_is_better=True, min_obs_required=1)\n"
      ]
     }
    ],
    "source": [
-    "print(*f.metrics.keys(),sep='\\n')"
+    "print(*f.metrics,sep='\\n')"
    ]
   },
   {
@@ -241,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "61da8d1c",
    "metadata": {},
    "outputs": [
@@ -249,6 +144,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "ValidationMetricValue\n",
       "TestSetRMSE\n",
       "TestSetMAPE\n",
       "TestSetMAE\n",
@@ -262,8 +158,7 @@
       "InSampleR2\n",
       "InSampleSMAPE\n",
       "InSampleMSE\n",
-      "InSampleABIAS\n",
-      "ValidationMetricValue\n"
+      "InSampleABIAS\n"
      ]
     }
    ],
@@ -283,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "905f8843",
    "metadata": {},
    "outputs": [
@@ -316,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "d65a1c34",
    "metadata": {},
    "outputs": [
@@ -346,7 +241,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "scalecast (3.11.14)",
    "language": "python",
    "name": "python3"
   },
@@ -360,7 +255,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.11.14"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
